--- a/master.css
+++ b/master.css
@@ -71,6 +71,9 @@ body {
     box-shadow: inset 2px 2px 20px 5px rgba(0, 0, 0, 0.9);
     margin: 1vw;
     padding: 3vw; }
+    body div.entry p {
+      font-size: 2.5vh;
+      font-family: Trebuchet, Sans-Serif; }
     body div.entry hr {
       width: 70%;
       margin: 5vh auto; }
