--- a/master.css
+++ b/master.css
@@ -137,6 +137,10 @@ pre.prettyprint {
   font-size: 2vw;
   overflow: auto;
   position: relative; }
+  .jq-entry .prettyprint {
+    font-size: 1.5vw;
+    background-color: #445e5e;
+    padding: 2vh 2vw; }
   .jq-entry div {
     margin-bottom: 4vw; }
 
