--- a/master.scss
+++ b/master.scss
@@ -270,6 +270,11 @@ pre.prettyprint {
     family:map-get($fonts, CodePro);
     size: 2vw;
   }
+  .prettyprint {
+    font-size: 1.5vw;
+    background-color: #445e5e;
+    padding: 2vh 2vw;
+  }
   overflow: auto;
   position: relative;
     div {
