--- a/master.scss
+++ b/master.scss
@@ -3,10 +3,10 @@ sass --watch master.scss:master.css
 */
 $baseline: 1vw; // $baseline:
 $title-font: 40px Tahoma, Helvetica, Arial, Sans-Serif;
-$fonts: ( CodePro: ('Code Source Pro', monospace), TypeWriter: ('Special Elite', serif), Clean: ('Raleway', Sans-Serif) );
+$fonts: ( Cabin: ('Cabin', Sans-Serif), CodePro: ('Code Source Pro', monospace), TypeWriter: ('Special Elite', serif), Clean: ('Raleway', Sans-Serif) );
 $colors: (
 trans30: rgba(#808080, 0.35),
- mango:#ebb861,
+mango:#ebb861,
 sand:#d0b588,
 orange:#f28b02,
 dkgrey:#575757,
@@ -19,6 +19,7 @@ ltblue:#3f71f1,
 dkblue:#18223b,
 ltgreen:#79e286,
 pastgreen: #a6b696,
+transPastGreen: rgba(#a6b696, 0.66),
 pastred: #c29d9d,
 dkred:#441f1d,
 ltred:#eb473d,
@@ -28,7 +29,6 @@ ltbg: rgba(#c7be84, 0.5),
 y: yellow,
 purp: purple,
 reddrk: #410211);
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -38,17 +38,21 @@ reddrk: #410211);
 // This comment wont show on css
 /* this comment will show in css*/
 li {
-    list: {
-      style: none;
-    }
+  list: {
+    style: none;
+  }
 }
+
 body {
-  background: url("img/blank_page.jpg") no-repeat center center fixed;
-  background-size: cover;
   padding: $baseline;
   font-family: map-get($fonts, CodePro);
 
   nav {
+    position: static; //FIXME: not sure what to do here.
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
     a {
       text-decoration: none;
     }
@@ -64,18 +68,54 @@ body {
 
     ul li {
       display: inline-block;
-
-      &::after {
-        content: " | ";
-      }
-
-      &:last-of-type::after {
-        content: none;
-      }
+      text-align: center;
+      width: 8vw;
+      // &::after {
+      //   content: " | ";
+      // }
+      // &:last-of-type::after {
+      //   content: none;
+      // }
     }
   }
 
+  div.bg-image:before {
+    content: "";
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: -1;
+    display: block;
+    background-image: url('img/steelbg.jpg');
+    width: 100%;
+    height: 100%;
+    // filter: blur(5px);
+    // filter: blur(5px);
+    // filter: brightness(0.4);
+    // filter: contrast(200%);
+    // filter: drop-shadow(16px 16px 20px blue);
+    // filter: grayscale(50%);
+    // filter: hue-rotate(90deg);
+    // filter: invert(75%);
+    // filter: opacity(25%);
+    // filter: saturate(30%);
+    // filter: sepia(20%);
+    // background: url("img/steelbg.jpg") no-repeat center center fixed;
+    // background-size: cover;
+    //   filter: url("filters.svg#filter-id");
+    /* Apply multiple filters */
+    filter: contrast(175%) brightness(23%);
+  }
 
+  .jq-container {
+    margin: 0;
+    padding: 0;
+  }
+
+  .journal-container {
+    overflow-x: hidden;
+  }
   /*90 degree rot state-name*/
   aside {
     position: absolute;
@@ -87,42 +127,41 @@ body {
       float: left;
       left: 0.5vw;
       position: absolute;
+      font: {
+        family: map-get($fonts, Cabin);
+        size: 1.4vw;
+      }
+      letter-spacing: 1.4em;
+      // opacity: .5;
+      color: map-get($colors, pastred);
     }
   }
-
-/* quiz blur */
-.ans {
+  /* quiz blur */
+  .ans {
     padding: 0;
     -webkit-filter: blur(6px);
     font: {
       family: map-get($fonts, Clean);
       size: 2.8vw;
       weight: 400;
-      }
+    }
     display: inline-block;
     opacity: 1%;
 
     &:hover {
       /*-webkit-filter: blur(0px);*/
-      animation: blurtxt .5s 1 forwards;
+      animation: blurtxt 0.5s 1 forwards;
     }
-}
-@-webkit-keyframes blurtxt {
+  }
+  @-webkit-keyframes blurtxt {
     0% {
-        -webkit-filter: blur(3px);
+      -webkit-filter: blur(3px);
     }
+
     100% {
-        -webkit-filter: blur(0px);
-        // opacity: 1;
+      -webkit-filter: blur(0px);
     }
-}
-
-
-
-
-
-
-
+  }
   /*-------NG-ANIMATE--------------*/
   /* start 'enter' transition on main view */
   main.ng-enter {
@@ -137,16 +176,14 @@ body {
     opacity: 1;
   }
 
-
   div.entry {
-    box-shadow: inset 2px 2px 20px 5px map-get($colors, shadow);
     margin: $baseline;
     padding: $baseline * 3;
 
     p {
       font: {
         size: 2.5vh;
-        family: Trebuchet, Sans-Serif
+        family: Trebuchet, Sans-Serif;
       }
     }
 
@@ -223,7 +260,33 @@ body {
   }
 }
 
+div.ecma-entry {
+  div.misc-entry {
+    background-color: map-get($colors, trim);
+    // box-shadow: inset 0px 0px 0px rgba(#a6b696, 0);
+  }
+
+}
+div.misc-entry {
+  background-color: map-get($colors, mango);
+  // box-shadow: inset 0px 0px 0px rgba(#a6b696, 0);
+}
 div.journal-entry {
+  box-shadow: inset 2px 2px 20px 5px map-get($colors, shadow);
+  margin: $baseline;
+  padding: $baseline * 3;
+  background: url("img/blank_page.jpg") no-repeat center center fixed;
+  background-size: cover;
+  // filter: blur(5px);
+  // filter: brightness(0.4);
+  filter: contrast(140%);
+  // filter: drop-shadow(16px 16px 20px blue);
+  // filter: grayscale(50%);
+  // filter: hue-rotate(90deg);
+  // filter: invert(75%);
+  // filter: opacity(25%);
+  // filter: saturate(30%);
+  // filter: sepia(20%);
   line-height: 1.4em;
   background: {
     color: map-get($colors, trans30);
@@ -236,24 +299,25 @@ div.journal-entry {
   }
   overflow: auto;
   text: {
-    shadow: 0 1px 2px map-get($colors, txtShadow);
+    shadow: 0 2px 3px map-get($colors, txtShadow);
   }
 }
-
 /* width classes */
 .w20 {
   width: 20vw;
 }
+
 .w40 {
   width: 40vw;
 }
+
 .w60 {
   width: 60vw;
 }
+
 .w80 {
   width: 80vw;
 }
-
 
 pre.prettyprint {
   font: {
@@ -261,15 +325,16 @@ pre.prettyprint {
   }
   background-color: rgba(242, 219, 150, 0.89);
 }
-
 /* jquery styles */
 .jq-entry {
+
   border: 1px solid map-get($colors, trim);
   height: 80vh;
   font: {
-    family:map-get($fonts, CodePro);
+    family: map-get($fonts, CodePro);
     size: 2vw;
   }
+
   .prettyprint {
     font-size: 1.5vw;
     background-color: #445e5e;
@@ -277,106 +342,126 @@ pre.prettyprint {
   }
   overflow: auto;
   position: relative;
-    div {
-      margin: {
-        // top: $baseline;
-        bottom: $baseline * 4;
-      }
+
+  div {
+    margin: {
+      // top: $baseline;
+      bottom: $baseline * 4;
     }
+  }
 }
+
 .ctr {
   text-align: left;
   margin: auto;
 }
+
 .bg {
   font-size: 2em;
 }
-
 /* color classes */
 .mango {
   color: map-get($colors, mango);
 }
+
 .sand {
   color: map-get($colors, sand);
 }
+
 .y {
   color: map-get($colors, y);
 }
+
 .orange {
   color: map-get($colors, orange);
 }
+
 .dkgrey {
   color: map-get($colors, dkgrey);
 }
+
 .ltgrey {
   color: map-get($colors, ltgrey );
 }
+
 .ivr {
   color: map-get($colors, ivr);
 }
+
 .wh {
   color: map-get($colors, wh);
 }
+
 .ltblue {
   color: map-get($colors, ltblue);
 }
+
 .purp {
   color: map-get($colors, purp);
 }
+
 .reddrk {
   color: map-get($colors, reddrk);
 }
+
 .dkblue {
   color: map-get($colors, dkblue);
 }
+
 .ltgreen {
   color: map-get($colors, ltgreen);
 }
+
 .dkred {
   color: map-get($colors, dkred);
 }
+
 .ltred {
   color: map-get($colors, ltred);
 }
+
 .dkbg {
   background-color: map-get($colors, dkbg);
 }
+
 .ltbg {
   background-color: map-get($colors, ltbg);
 }
 
 .shadn {
-    box-shadow: 5px 5px 5px black;
-    border: 1px solid wheat;
-    margin: 1%;
-    padding: 1%;
+  box-shadow: 5px 5px 5px black;
+  border: 1px solid wheat;
+  margin: 1%;
+  padding: 1%;
 }
+
 .shadw {
-    box-shadow: 10px 10px 25px black;
-    margin: 1%;
-    padding: 1%;
+  box-shadow: 10px 10px 25px black;
+  margin: 1%;
+  padding: 1%;
 }
+
 .code-questions {
-    width: 80vw;
-    color: map-get($colors, ivr);
-    border: 1px solid white;
-    line-height: 2.5em;
+  width: 80vw;
+  color: map-get($colors, ivr);
+  border: 1px solid white;
+  line-height: 2.5em;
+  font: {
+    size: 0.8em;
+    weight: 400;
+    family: map-get($fonts, Clean);
+  }
+  background-color: rgba(0, 0, 0, .8);
+  padding: 1.5vw;
+  margin: auto;
 
-    font: {
-      size: .8em;
-      weight: 400;
-      family: map-get($fonts, Clean);
+  & .middle {
+    margin: {
+      left: 25%;
     }
-    background-color: rgba(0, 0, 0, .8);
-    padding: 1.5vw;
-    margin: auto;
-
-    & .middle {
-      margin: {
-        left: 25%;
-      }
-    }
+  }
 }
+
 .code-questions2 {
   position: relative;
   border: 1px solid ivory;
@@ -390,16 +475,40 @@ pre.prettyprint {
 }
 
 img {
-    margin: 1vw;
-    position: relative;
-    right: 0;
-    width: 60vw;
-    border: 1px solid maroon;
+  margin: 1vw;
+  position: relative;
+  right: 0;
+  width: 60vw;
+  border: 1px solid maroon;
 }
 
 pre {
-    white-space: pre-wrap;
+  white-space: pre-wrap;
 }
-.fRight {
-  float: right;
+
+#appName {
+  position: absolute;
+  right: 30px;
+  top: 10px;
+  opacity: 1;
+  color: map-get($colors, pastgreen);
+  font: {
+    family: map-get($fonts, Cabin);
+    size: 1.5vw;
+  }
+  letter-spacing: 0.4em;
+}
+
+a[ui-sref] {
+  font: {
+    family: map-get($fonts, Cabin);
+    size: 1.2vw;
+  }
+  text-decoration: overline;
+  text-decoration-color: map-get($colors, pastgreen);
+  transition: background-color 2s;
+}
+
+a[ui-sref]:hover {
+  background-color: map-get($colors, transPastGreen);
 }
