--- a/master.scss
+++ b/master.scss
@@ -260,13 +260,36 @@ body {
   }
 }
 
+div.misc-entry {
+  background-color: map-get($colors, trim);
+  // box-shadow: inset 0px 0px 0px rgba(#a6b696, 0);
+}
+
 div.ecma-entry {
-  div.misc-entry {
-    background-color: map-get($colors, trim);
-    // box-shadow: inset 0px 0px 0px rgba(#a6b696, 0);
+  border: 1px solid map-get($colors, trim);
+  height: 80vh;
+  font: {
+    family: map-get($fonts, CodePro);
+    size: 2vw;
+  }
+
+  .prettyprint {
+    font-size: 1.5vw;
+    background-color: #445e5e;
+    padding: 2vh 2vw;
+  }
+  overflow: auto;
+  position: relative;
+
+  div {
+    margin: {
+      // top: $baseline;
+      bottom: $baseline * 4;
+    }
   }
 
 }
+
 div.misc-entry {
   background-color: map-get($colors, mango);
   // box-shadow: inset 0px 0px 0px rgba(#a6b696, 0);
