--- a/scss/jq/jquery.scss
+++ b/scss/jq/jquery.scss
@@ -1,5 +1,6 @@
 /* jquery styles */
 .jq-entry {
+  background-color: map-get($colors, pastgreen);
 
   border: 1px solid map-get($colors, trim);
   height: 80vh;
