--- a/master.scss
+++ b/master.scss
@@ -3,7 +3,7 @@ sass --watch master.scss:master.css
 */
 $baseline: 1vw; // $baseline:
 $title-font: 40px Tahoma, Helvetica, Arial, Sans-Serif;
-$fonts: ( Cabin: ('Cabin', Sans-Serif), CodePro: ('Code Source Pro', monospace), TypeWriter: ('Special Elite', serif), Clean: ('Raleway', Sans-Serif) );
+$fonts: ( Comfort: ('Comfortaa', cursive), Cabin: ('Cabin', Sans-Serif), CodePro: ('Code Source Pro', monospace), TypeWriter: ('Special Elite', serif), Clean: ('Raleway', Sans-Serif) );
 $colors: (
 trans30: rgba(#808080, 0.35),
 mango:#ebb861,
@@ -37,3 +37,4 @@ reddrk: #410211);
 @import 'scss/misc/misc';
 @import 'scss/sass/sass';
 @import 'scss/home/home';
+@import 'scss/angular/angular';
