--- a/scss/general/general.scss
+++ b/scss/general/general.scss
@@ -1,5 +1,3 @@
-
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -20,33 +18,29 @@ body {
 
   nav {
     position: static; //FIXME: not sure what to do here.
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-
+    margin-top:3vh;
     a {
       text-decoration: none;
     }
 
     ul {
-      width: 60%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      width: 100%;
       margin: auto;
     }
 
-    ul li a {
-      color: map-get($colors, dkgrey);
-    }
-
     ul li {
-      display: inline-block;
+      display: inline;
       text-align: center;
-      width: 8vw;
-      // &::after {
-      //   content: " | ";
-      // }
-      // &:last-of-type::after {
-      //   content: none;
-      // }
+      width: 7vw;
+    }
+  }
+
+  .prettyprint {
+    font: {
+      family: map-get($fonts, CodePro);
     }
   }
 
@@ -61,21 +55,6 @@ body {
     background-image: url('img/steelbg.jpg');
     width: 100%;
     height: 100%;
-    // filter: blur(5px);
-    // filter: blur(5px);
-    // filter: brightness(0.4);
-    // filter: contrast(200%);
-    // filter: drop-shadow(16px 16px 20px blue);
-    // filter: grayscale(50%);
-    // filter: hue-rotate(90deg);
-    // filter: invert(75%);
-    // filter: opacity(25%);
-    // filter: saturate(30%);
-    // filter: sepia(20%);
-    // background: url("img/steelbg.jpg") no-repeat center center fixed;
-    // background-size: cover;
-    //   filter: url("filters.svg#filter-id");
-    /* Apply multiple filters */
     filter: contrast(175%) brightness(23%);
   }
 }
@@ -139,7 +118,6 @@ main.ng-enter-active {
   opacity: 1;
 }
 
-
 div.entry {
   margin: $baseline;
   padding: $baseline * 3;
@@ -149,6 +127,9 @@ div.entry {
       size: 2.5vh;
       family: Trebuchet, Sans-Serif;
     }
+  }
+  .caption {
+    color: map-get($colors, sand);
   }
 
   hr {
@@ -185,8 +166,7 @@ div.entry {
 
   ol {
     & a {
-      color: purple;
-
+      // color: purple;
       &:hover {
         color: skyblue;
       }
@@ -222,7 +202,6 @@ div.entry {
     }
   }
 }
-
 /* width classes */
 .w20 {
   width: 20vw;
@@ -246,6 +225,7 @@ pre.prettyprint {
   }
   background-color: rgba(242, 219, 150, 0.89);
 }
+
 .ctr {
   text-align: left;
   margin: auto;
@@ -322,6 +302,9 @@ pre.prettyprint {
 .ltbg {
   background-color: map-get($colors, ltbg);
 }
+.trans {
+  color: transparent;
+}
 
 .shadn {
   box-shadow: 5px 5px 5px black;
@@ -379,6 +362,10 @@ img {
 
 pre {
   white-space: pre-wrap;
+  font: {
+    family: map-get($fonts, Comfort);
+    // size: 2vw;
+  }
 }
 
 #appName {
@@ -394,22 +381,39 @@ pre {
   letter-spacing: 0.4em;
 }
 
-a[ui-sref] {
+.navlink{
   font: {
     family: map-get($fonts, Cabin);
     size: 1.2vw;
   }
+  color: transparent;
   text-decoration: overline;
   text-decoration-color: map-get($colors, pastgreen);
-  transition: background-color 2s;
+  transition: all 0.6s;
 }
 
-a[ui-sref]:hover {
-  background-color: map-get($colors, transPastGreen);
+// a[ui-sref]:hover {
+//   // background-color: map-get($colors, transPastGreen);
+//   color: map-get($colors, ivr);
+//   opacity: 1;
+// }
+.toTrans {
+  color: transparent;
+  transition: color 2s;
+}
+.toIvr {
+  color: ivory;
+  transition: color 2s;
+
 }
 
 //FIXME: trying to remove the visited purple color
-h4 a, a:link, a:visited, a:focus, a:hover, a:active{
+a:active,
+a:focus,
+a:hover,
+a:link,
+a:visited,
+h4 a {
   margin: 2vh auto;
   color: ivr;
   text-decoration: {
