--- a/master.scss
+++ b/master.scss
@@ -13,6 +13,7 @@ dkgrey:#575757,
 ltgrey:#bdbdbd,
 ivr:#e6d8cc,
 wh: #fff,
+mustard: #a38853,  
 trim: #f5facf,
 txtShadow: #f1e8ce,
 ltblue:#3f71f1,
