--- a/scss/ecma/ecma.scss
+++ b/scss/ecma/ecma.scss
@@ -1,6 +1,7 @@
 div.ecma-entry {
   border: 1px solid map-get($colors, trim);
   height: 80vh;
+  background-color: map-get($colors, reddrk);
   font: {
     family: map-get($fonts, CodePro);
     size: 2vw;
