--- a/master.scss
+++ b/master.scss
@@ -15,6 +15,7 @@ trans30: rgba(#808080, 0.35),
 mango:#ebb861,
 sand:#d0b588,
 orange:#f28b02,
+dkorange: #945706,
 dkgrey:#575757,
 ltgrey:#bdbdbd,
 ivr:#e6d8cc,
@@ -23,6 +24,7 @@ mustard: #a38853,
 trim: #f5facf,
 txtShadow: #f1e8ce,
 ltblue:#3f71f1,
+navy: navy,
 dkblue:#18223b,
 ltgreen:#79e286,
 pastgreen: #a6b696,
@@ -34,6 +36,8 @@ shadow: rgba(#000, 0.9),
 dkbg: rgba(#2d2c2c, 0.7),
 ltbg: rgba(#c7be84, 0.5),
 y: yellow,
+paleY: #e8e598,
+pastY: #bfbc64,
 purp: purple,
 reddrk: #410211);
 
