--- a/scss/ecma/ecma.scss
+++ b/scss/ecma/ecma.scss
@@ -1,7 +1,7 @@
 div.ecma-entry {
   border: 1px solid map-get($colors, trim);
   height: 80vh;
-  background-color: map-get($colors, reddrk);
+  background-color: map-get($colors, ltgrey);
   font: {
     family: map-get($fonts, CodePro);
     size: 2vw;
