--- a/master.css
+++ b/master.css
@@ -416,7 +416,7 @@ div.misc-entry {
   background-color: #f5facf; }
 
 div.misc-entry {
-  background-color: #ebb861; }
+  background-color: #945706; }
 
 div.sass-entry {
   background-color: #441f1d; }
