--- a/scss/misc/misc.scss
+++ b/scss/misc/misc.scss
@@ -3,6 +3,6 @@ div.misc-entry {
   // box-shadow: inset 0px 0px 0px rgba(#a6b696, 0);
 }
 div.misc-entry {
-  background-color: map-get($colors, mango);
+  background-color: map-get($colors, dkorange);
   // box-shadow: inset 0px 0px 0px rgba(#a6b696, 0);
 }
